Pineapple-UI/src/app/main/home/home.component.scss
.header {
  padding-top: 10px;
  text-align: center;
  font-family: Ubuntu, sans-serif;
}

.card {
    max-width: 350px;
    min-width: 350px;
    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
}

.button-bottom-right {
    position: fixed;
    bottom: 16px;
    right: 32px;
    z-index: 3; // make it stay above everything
}

.edit-button {
    position: absolute;
    top: 0;
    right: 0;
}

mat-icon{
  color: grey;
}

button:focus {
  outline:0;
}

//.list-group-item {
//  overflow: hidden; // these two must be true for text-overflow to work
//  white-space: nowrap;
//  text-overflow: ellipsis;
//}


/* card-text takes care of text overflow*/
.card-text {
    overflow: hidden;
    position: relative;
    line-height: 1.2em;
    max-height: 3.6em;
    text-align: justify;
    margin-right: -1em;
    padding-right: 1em;
}
.card-text:before {
    content: '...';
    position: absolute;
    right: 0;
    bottom: 0;
}
.card-text:after {
    content: '';
    position: absolute;
    right: 0;
    width: 1em;
    height: 1em;
    margin-top: 0.2em;
    background: white;
}

.task-add-icon {
    color: #323232;
    &:hover {
        color: seagreen;
        text-shadow: 0 0 5px rgba(54, 161, 70, 0.2);
    }
    &:active {
        color: #323232;
    }
}

.task-cancel-icon {
    color: #323232;
    &:hover {
        color: #d92a3b;
        text-shadow: 0 0 5px rgba(54, 161, 70, 0.2);
    }
    &:active {
        color: #323232;
    }
}

.task-submit-icon {
    color: #b2b2a9;
    font-size: 40px;
    &:hover {
        color: seagreen;
        text-shadow: 0 0 5px rgba(54, 161, 70, 0.2);
    }
    &:active {
        color: #323232;
    }
}

.task-add-button {
    background: inherit;
    border: none;
    width: 75%;
    height: 100%;
    padding: 3px 3px;
    float:right;
}

.task-close-button {
    background: inherit;
    border: none;
    float: right;
}

.task-submit-button {
    background: inherit;
    border: none;
    float: right;
}

.test {
    height: 30px;
    width: 100%;
}

.task-add-container {
    width: 50%;
    height: 100%;
    float: right;
}

.task-add-form-popup {
    display: none;
    position: absolute;
    left: 102%;
    z-index: 3;
}

.task-add-form-container {
    min-width: 150px;
    padding: 20px;
    background: white;
    border-radius: 20px;
    box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.3);
}

.add-title {
    display: block;
    width: 110px;
    margin: 10px 0 0;
}

.add-description {
    display: block;
    width: 400px;
    margin: 10px 0 0;
}

.card-header {
    height: 50px;
    padding: 4px;
    .align-left {
        padding: 3% 20px;
        width: 70%;
        height: 100%;
        float: left;
    }
    .align-right {
        padding: 5px 5px;
        width: 30%;
        height: 100%;
        float: right;
        object-fit: scale-down;
    }
}

// todo: text overflow and tooltip boundary control

.tooltip-container {
  position: relative;
  &:hover {
    .tooltip-content {

      visibility: visible;
      opacity: 1;
      transition: opacity 0.4s ease;
      //top: -125px;
    }
  }
}
.tooltip-content {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  left: 100%;
  background: rgba(46, 46, 45, 0.9);
  border-radius: 5px;
  padding: 15px 15px;
  margin: 16px;
  font-size: 15px;
  max-width: 300px;
  height: auto;
  z-index: 2;
  color: #FFFFFF;
}

